--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     <!--Sign in and add a project "fireMessage"-->
     <!--PASTE SNIPPET HERE-->
 
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
+    <script>
+    // Initialize Firebase
+    var config = {
+    apiKey: "AIzaSyBxXN2YODDSUKbUFNnzlfJtP_K5tk917b0",
+    authDomain: "firemessage-2e602.firebaseapp.com",
+    databaseURL: "https://firemessage-2e602.firebaseio.com",
+    projectId: "firemessage-2e602",
+    storageBucket: "",
+    messagingSenderId: "376661184908"
+    };
+    firebase.initializeApp(config);
+    </script>
 
 
 
@@ -28,7 +41,7 @@
 <body>
 
     <!--Add your name-->
-    <h1>Bob's Messaging App</h1>
+    <h1>Bao"s Messaging App</h1>
 
     <!--Will be populated with messages-->
     <div class="allMessages">
